--- a/djangoflow/templates/index.html
+++ b/djangoflow/templates/index.html
@@ -12,7 +12,7 @@
 <h3>Workflows</h3>
 <ul>
 	{% for app in workflows %}
-		<li><a href="{% url 'index' app app %}">{{app}}</a></li>
+		<li><a href="{% url 'workflow-detail' app %}">{{app}}</a></li>
 	{% endfor %}
 </ul>
 {% endblock %}
