--- a/djangoflow/templates/base.html
+++ b/djangoflow/templates/base.html
@@ -43,7 +43,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'main' %}">Home</a></li>
+            <li class="active"><a href="{% url 'workflows' %}">Home</a></li>
             <li class="dropdown">
         </li>
             <li><a href="#about">About</a></li>
