--- a/djangoflow/templates/core/create.html
+++ b/djangoflow/templates/core/create.html
@@ -3,16 +3,16 @@
 {% block main_content %}
 
 <ol class="breadcrumb">
-  <li><a href="{% url 'main' %}">Home</a></li>
-  <li><a href="{% url 'index' app_title entity_title %}">{{ entity_title }}</a></li>
-  <li class="active">Create</li>
+  <li><a href="{% url 'workflows' %}">Home</a></li>
+  <li><a href="{% url 'workflow-detail' app_title %}">{{ entity_title }}</a></li>
+  <li class="active">Create Activity</li>
 </ol>
 
 <h4>Create {{ entity_title }}</h4>
 
 {% include "core/widgets/validation.html" with error_messages=error_message %}
 
-<form action="{% url 'create' app_title entity_title %}" method="post" class="form-horizontal">
+<form action="{% url 'create' app_title entity_title identifier %}" method="post" class="form-horizontal">
     {% include 'core/widgets/form_fields_display.html' %}
 </form>
 {% endblock %}
