--- a/djangoflow/templates/core/workflow.html
+++ b/djangoflow/templates/core/workflow.html
@@ -45,7 +45,7 @@
 								<td>{{task.status}}</td>
 								<td>{{task.creation_date}}</td>
 								<td>{{task.last_updated}}</td>
-								<td><a class="btn btn-primary btn-xs" href="{% url 'create' app_title entity_title task.id %}">Start Task</a></td>
+								<td><a class="btn btn-primary btn-xs" href="{% url 'create' app_title task.get_activity_title task.id %}">Start Task</a></td>
 						    </tr>
 					    {% endfor %}
 					</table>
