--- a/djangoflow/templates/core/widgets/form_fields_display.html
+++ b/djangoflow/templates/core/widgets/form_fields_display.html
@@ -11,6 +11,7 @@
 {% endfor %}
 <div class="form-group">
     <div  class="col-sm-offset-2 col-sm-10">
-        <input type="submit" value="Save" class="btn btn-success" />
+        <input type="submit" value="Save" name="save" class="btn btn-success" />
+        <input type="submit" value="Submit To" name="submit" class="btn btn-primary" />
     </div>
 </div>
