template update for actions section

--- a/djangoflow/templates/core/widgets/form_fields_display.html
+++ b/djangoflow/templates/core/widgets/form_fields_display.html
@@ -10,8 +10,13 @@
 </fieldset>
 {% endfor %}
 <div class="form-group">
-    <div  class="col-sm-offset-2 col-sm-10">
+    <div class="col-sm-offset-2 col-sm-10">
         <input type="submit" value="Save" name="save" class="btn btn-success" />
-        <input type="submit" value="Submit To" name="submit" class="btn btn-primary" />
     </div>
+</div>
+<div class="panel panel-default">
+	<div class="panel-heading">Actions</div>
+	<div class="panel-body">
+		<input type="submit" value="Submit To" name="submit" class="btn btn-primary" />
+	</div>
 </div>
