revised view for activity update

--- a/djangoflow/templates/core/update.html
+++ b/djangoflow/templates/core/update.html
@@ -3,8 +3,8 @@
 {% block main_content %}
 
 <ol class="breadcrumb">
-  <li><a href="{% url 'main' %}">Home</a></li>
-  <li><a href="{% url 'index' app_title entity_title %}">{{ entity_title }}</a></li>
+  <li><a href="{% url 'workflows' %}">Home</a></li>
+  <li><a href="{% url 'workflow-detail' app_title %}">{{ entity_title }}</a></li>
   <li class="active">Update</li>
 </ol>
 
