added template tag for computing activity identifier

--- a/djangoflow/templates/core/workflow.html
+++ b/djangoflow/templates/core/workflow.html
@@ -52,8 +52,9 @@
 								{% activity_title task.flow_ref_key app_title as act_title %}
 								<td>
 									<a class="btn btn-primary btn-xs" href="{% url 'view' app_title act_title instance.id %}">View</a>
-									<a class="btn btn-primary btn-xs disabled" href="{% url 'create' app_title act_title task.id %}">Create</a>
-									<a class="btn btn-primary btn-xs" href="{% url 'update' app_title act_title instance.id %}">Update</a>
+									<a class="btn btn-primary btn-xs" href="{% url 'create' app_title act_title task.id %}">Create</a>
+									{% activity_identifier app_title task as identifier %}
+									<a class="btn btn-primary btn-xs" href="{% url 'update' app_title act_title identifier %}">Update</a>
 								</td>
 						    </tr>
 					    {% endfor %}
