enabled task creation on submit, updated templates

--- a/djangoflow/templates/core/detail.html
+++ b/djangoflow/templates/core/detail.html
@@ -4,8 +4,8 @@
 {% block main_content %}
 
 <ol class="breadcrumb">
-  <li><a href="{% url 'main' %}">Home</a></li>
-  <li><a href="{% url 'index' app_title object.title %}">{{ object.title }}</a></li>
+  <li><a href="{% url 'workflows' %}">Home</a></li>
+  <li><a href="{% url 'workflow-detail' app_title %}">Workflows</a></li>
   <li class="active">Detail</li>
   <li class="active">{{ object.id }}</li>
 </ol>
@@ -13,7 +13,7 @@
 {% with object_id=object.id|stringformat:"s" next_action="/"|add:app_title|add:"/"|add:object.title|add:"/Delete/" %}
     {% include "core/widgets/confirmation_modal.html" with message="Are you sure you want to delete?" title="Confirmation" action=next_action|add:object_id %}
 {% endwith %}
-<a href="{% url 'update' app_title object.title object.id %}" class="btn btn-primary" role="button">Update</a>
+<a href="{% url 'update' app_title entity_title object.id %}" class="btn btn-primary" role="button">Update</a>
 <br></br>
 <h4> {{ object.title }} Detail </h4>
 
