--- a/djangoflow/templates/core/workflow.html
+++ b/djangoflow/templates/core/workflow.html
@@ -51,9 +51,9 @@
 								<td>{{task.last_updated}}</td>
 								{% activity_title task.flow_ref_key app_title as act_title %}
 								<td>
-									<a class="btn btn-primary btn-xs" href="{% url 'view' app_title act_title instance.id %}">View</a>
+									{% activity_identifier task as identifier %}
+									<a class="btn btn-primary btn-xs" href="{% url 'view' app_title act_title identifier %}">View</a>
 									<a class="btn btn-primary btn-xs" href="{% url 'create' app_title act_title task.id %}">Create</a>
-									{% activity_identifier app_title task as identifier %}
 									<a class="btn btn-primary btn-xs" href="{% url 'update' app_title act_title identifier %}">Update</a>
 								</td>
 						    </tr>
