added option to rollback (in progress)

--- a/djangoflow/templates/core/detail.html
+++ b/djangoflow/templates/core/detail.html
@@ -9,11 +9,15 @@
   <li class="active">Detail</li>
   <li class="active">{{ object.id }}</li>
 </ol>
-<a data-toggle="modal" href="#confirmation_modal" class="btn btn-danger {% if not object.task.is_active %} disabled {% endif %}" role="button">Delete</a>
+<form action="{% url 'view' app_title entity_title object.id %}" method="POST">
+  {% csrf_token %}
+  <a data-toggle="modal" href="#confirmation_modal" class="btn btn-danger {% if not object.task.is_active %} disabled {% endif %}" role="button">Delete</a>
+  <button type="submit" name="rollback" class="btn btn-warning">Rollback</button>
+  <a href="{% url 'update' app_title entity_title object.id %}" class="btn btn-primary" role="button">Update</a>
+</form>
 {% with object_id=object.id|stringformat:"s" next_action="/"|add:app_title|add:"/"|add:object.title|add:"/Delete/" %}
     {% include "core/widgets/confirmation_modal.html" with message="Are you sure you want to delete?" title="Confirmation" action=next_action|add:object_id %}
 {% endwith %}
-<a href="{% url 'update' app_title entity_title object.id %}" class="btn btn-primary" role="button">Update</a>
 <br></br>
 <h4> {{ object.title }} Detail </h4>
 
