--- a/djangoflow/templates/core/detail.html
+++ b/djangoflow/templates/core/detail.html
@@ -22,7 +22,7 @@
 <h4> {{ object.title }} Detail </h4>
 
 <table class="table table-bordered">
-    {% model_field_values 'display' as entity_instance %}
+    {% model_field_values object 'display' as entity_instance %}
     {% for name, value in entity_instance.items %}
     <tr>
         <th>{{ name }}</th>
