--- a/djangoflow/templates/core/widgets/confirmation.html
+++ b/djangoflow/templates/core/widgets/confirmation.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="confirmation_modal">
+<div class="modal fade" id="confirmation">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
