--- a/djangoflow/templates/core/widgets/form.html
+++ b/djangoflow/templates/core/widgets/form.html
@@ -14,16 +14,18 @@
         <input type="submit" value="Save" name="save" class="btn btn-success" />
     </div>
 </div>
-{% if next or object.task.is_final %}
+{% with is_final_task=object.task.is_final %}
+{% if next or is_final_task %}
 <div class="panel panel-default">
 	<div class="panel-heading">Actions</div>
 	<div class="panel-body">
         {% for option in next %}
 		  <input type="submit" value={{option}} name="submit" class="btn btn-primary" />
         {% endfor %}
-        {% if object.task.is_final %}
+        {% if is_final_task %}
           <input type="submit" value="Finish" name="finish" class="btn btn-primary" />
         {% endif %}
 	</div>
 </div>
 {% endif %}
+{% endwith %}
