--- a/djangoflow/templates/core/detail.html
+++ b/djangoflow/templates/core/detail.html
@@ -11,23 +11,14 @@
 </ol>
 <form action="{% url 'rollback' app_title entity_title object.id %}" method="POST">
   {% csrf_token %}
-  <a data-toggle="modal" href="#confirmation_modal" class="btn btn-danger {% if not object.task.is_active %} disabled {% endif %}" role="button">Delete</a>
+  <a data-toggle="modal" href="#confirmation" class="btn btn-danger {% if not object.task.is_active %} disabled {% endif %}" role="button">Delete</a>
   <button type="submit" name="rollback" class="btn btn-warning">Rollback</button>
   <a href="{% url 'update' app_title entity_title object.id %}" class="btn btn-primary" role="button">Update</a>
 </form>
 {% with object_id=object.id|stringformat:"s" next_action="/"|add:app_title|add:"/"|add:object.title|add:"/Delete/" %}
-    {% include "core/widgets/confirmation_modal.html" with message="Are you sure you want to delete?" title="Confirmation" action=next_action|add:object_id %}
+    {% include "core/widgets/confirmation.html" with message="Are you sure you want to delete?" title="Confirmation" action=next_action|add:object_id %}
 {% endwith %}
 <br></br>
 <h4> {{ object.title }} Detail </h4>
-
-<table class="table table-bordered">
-    {% model_field_values object 'display' as entity_instance %}
-    {% for name, value in entity_instance.items %}
-    <tr>
-        <th>{{ name }}</th>
-        <td>{{ value }}</td>
-    </tr>
-    {% endfor %}
-</table>
+{% include "core/widgets/readonly.html" %}
 {% endblock %}
