--- a/djangoflow/templates/core/update.html
+++ b/djangoflow/templates/core/update.html
@@ -14,6 +14,6 @@
 <h4>Update {{ entity_title }}</h4>
 
 <form action="{% url 'update' app_title entity_title object.id %}" method="post" class="form-horizontal">
-    {% include 'core/widgets/form_fields_display.html' %}
+    {% include 'core/widgets/form.html' %}
 </form>
 {% endblock %}
