--- a/djangoflow/templates/core/create.html
+++ b/djangoflow/templates/core/create.html
@@ -5,7 +5,7 @@
 <ol class="breadcrumb">
   <li><a href="{% url 'workflows' %}">Home</a></li>
   <li><a href="{% url 'workflow-detail' app_title %}">{{ entity_title }}</a></li>
-  <li class="active">Create Activity</li>
+  <li class="active">Initiate Activity</li>
 </ol>
 
 {% include "core/widgets/validation.html" with error_messages=error_message %}
