--- a/djangoflow/templates/core/widgets/readonly.html
+++ b/djangoflow/templates/core/widgets/readonly.html
@@ -1,7 +1,7 @@
 {% load core_tags %}
 
 <table class="table table-condensed">
-    {% model_field_values object 'display' as entity_instance %}
+    {% activity_data object 'display' as entity_instance %}
     {% for name, value in entity_instance.items %}
     <tr>
         <th>{{ name }}</th>
