renamed project from djangflow to activflow

--- a/activflow/templates/base.html
+++ b/activflow/templates/base.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">djangoflow</a>
+          <a class="navbar-brand" href="#">activflow</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
