--- a/activflow/templates/core/widgets/history.html
+++ b/activflow/templates/core/widgets/history.html
@@ -1,30 +1,32 @@
 {% load core_tags %}
 
-{% with tasks=object.task.request.tasks.all %}
-    {% if tasks %}
-    <table class="table table-bordered">
-        <tr>
-            <th>Request History</th>
-        </tr>
-        {% for task in tasks %}
-        {% with activity=task.activity %}
-            {% if not activity.id == object.id %}
-                <tr data-toggle="collapse" data-target="#req{{activity.id}}" class="active">
-                    <td>
-                        <div class="row">
-                          <div class="col-md-8"><span class=" glyphicon glyphicon glyphicon-plus"> </span> <strong>{{activity.title}}</strong> - <small>{{task.assignee.name}}</small></div>
-                          <div class="col-md-4 text-right"><small>{{activity.last_updated}}</small></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr id="req{{activity.id}}" class="collapse">
-                    <td>
-                        {% include "core/widgets/readonly.html" %}
-                    </td>
-                </tr>
-            {% endif %}
-        {% endwith %}
-        {% endfor %}
-    </table>
+{% if request %}
+{% with tasks=request.tasks.all %}
+    {% if tasks.count > 1 %}
+        <table class="table table-bordered">
+            <tr>
+                <th>Request History</th>
+            </tr>
+            {% for task in tasks %}
+            {% with activity=task.activity %}
+                {% if activity %}
+                    <tr data-toggle="collapse" data-target="#req{{activity.id}}{{activity.title}}" class="active">
+                        <td>
+                            <div class="row">
+                              <div class="col-md-8"><span class=" glyphicon glyphicon glyphicon-plus"> </span> <strong>{{activity.title}}</strong> - <small>{{task.assignee.name}}</small></div>
+                              <div class="col-md-4 text-right"><small>{{activity.last_updated}}</small></div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr id="req{{activity.id}}{{activity.title}}" class="collapse">
+                        <td>
+                            {% include "core/widgets/readonly.html" with object=activity %}
+                        </td>
+                    </tr>
+                {% endif %}
+            {% endwith %}
+            {% endfor %}
+        </table>
     {% endif %}
 {% endwith %}
+{% endif %}
