--- a/activflow/templates/core/workflow.html
+++ b/activflow/templates/core/workflow.html
@@ -25,7 +25,7 @@
     {% if not instance.task.status == 'Rolled Back'%}
 		<tr class="active">
 			<td>
-				<button class="btn btn-default btn-xs" type="button" data-toggle="collapse" data-target="#req{{instance.task.request.id}}">
+				<button class="btn btn-default btn-xs" type="button" data-toggle="collapse" data-target="#{{instance.code}}">
 					View Tasks <span class="badge">{{ instance.task.request.tasks.count }}</span>
 				</button>
 			</td>
@@ -36,7 +36,7 @@
 			<td>{{instance.task.request.last_updated}}</td>
 	    </tr>
 	    {% if instance.task.request.tasks %}
-		    <tr id="req{{instance.task.request.id}}" class="collapse">
+		    <tr id="{{instance.code}}" class="collapse">
 		    	<td colspan="6">
 				    <table class="table table-condensed">
 						<tr>
