--- a/activflow/templates/core/detail.html
+++ b/activflow/templates/core/detail.html
@@ -13,7 +13,7 @@
   {% csrf_token %}
   <a data-toggle="modal" href="#confirmation" class="btn btn-danger {% if not object.task.is_active %} disabled {% endif %}" role="button">Delete</a>
   <button type="submit" name="rollback" class="btn btn-warning {% if not object.task.is_rollback_possible %} disabled {% endif %}">Rollback</button>
-  <a href="{% url 'update' app_title entity_title object.id %}" class="btn btn-primary" role="button">Update</a>
+  <a href="{% url 'update' app_title entity_title object.id %}" class="btn btn-primary {% if not object.task.activity or not object.task.is_active %} disabled {% endif %}" role="button">Update</a>
 </form>
 {% with object_id=object.id|stringformat:"s" next_action="/"|add:app_title|add:"/"|add:object.title|add:"/Delete/" %}
     {% include "core/widgets/confirmation.html" with message="Are you sure you want to delete?" title="Confirmation" action=next_action|add:object_id %}
